@@ -553,7 +553,9 @@ enum assume_segreg GetAssume( const struct asym *override, const struct asym *sy
 {
     enum assume_segreg  reg;
 
-    if( ( def != ASSUME_NOTHING ) && SegAssumeTable[def].is_flat ) {
+    /* v2.17: handle case if model isn't flat, but current segment is 64-bit ( flatgrp3.asm ) */
+    //if( ( def != ASSUME_NOTHING ) && SegAssumeTable[def].is_flat ) {
+    if( ( def != ASSUME_NOTHING ) && ( SegAssumeTable[def].is_flat || ModuleInfo.Ofssize == USE64 ) ) {
         *passume = (struct asym *)ModuleInfo.flat_grp;
         return( def );
     }
